tutos/l12_helm_chart/mlflow/app/deployment.yaml
# Creating MLflow deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-deployment
  template:
    metadata:
      labels:
        app: mlflow-deployment
    spec:
      containers:
        - name: mlflow-deployment
          image: liupengfei99/mlflow:1.14.1
          imagePullPolicy: Always
          args:
            - --host=0.0.0.0
            - --port=8000
            - --backend-store-uri=postgresql://$(MLFLOW_DB_LOGIN):$(MLFLOW_DB_PWD)@$(MLFLOW_DB_SERVER_URL):$(MLFLOW_DB_SERVER_PORT)/$(MLFLOW_DB_NAME)
            - --default-artifact-root=s3://$(MLFLOW_S3_BUCKET_NAME)/$(MLFLOW_S3_PATH)/
            - --workers=2
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
