tutos/l12_helm_chart/mlflow/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: mlflow-deployment
