tutos/l12_helm_chart/mlflow/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
spec:
  tls:
    - hosts:
        - mlflow.lab.sspcloud.fr
  rules:
    - host: mlflow.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow-service
                port:
                  number: 8000
